<resources>
    <string name="app_name">SafeTrail</string>
    <string name="tab_text_1">Train Management</string>
    <string name="tab_text_2">Customer Management</string>
    <string name="tab_text_3">Information</string>
    <string name="tab_text_4">Train Operations</string>
    <string name="tab_text_5">Line Operations</string>
    <string name="tab_text_6">Schedule</string>
    <string name="tab_text_7">Pricing</string>
    <string name="tab_text_8">PROCEED</string>
    <string name="tab_text_9">Enter Price:</string>
    <string name="tab_text_10">Select Train:</string>
    <string name="tab_text_11">Select Date:</string>
    <string name="tab_text_12">Select Time:</string>
    <string name="tab_text_13">%</string>
    <string name="tab_text_14">Number of Customers Transacting</string>
    <string name="tab_text_15">Number of Tickets Sold</string>
    <string name="tab_text_16">Number of Trains Departed</string>
    <string name="tab_text_17">Give A Discount</string>
    <string name="tab_text_18">Enter User Name</string>
    <string name="tab_text_19">Enter Discount Amount</string>
    <string name="tab_text_20">Ban Customers</string>
    <string name="tab_text_21">BAN</string>
    <string name="tab_text_22">Add Train</string>
    <string name="tab_text_23">Train ID</string>
    <string name="proceed_to_seat_selection">Proceed to Seat Selection</string>
    <string name="first_class">First Class</string>
    <string name="economy">Economy</string>
    <string name="c1">C1</string>
    <string name="c8">C8</string>
    <string name="d6">D6</string>
    <string name="c7">C7</string>
    <string name="c3">C3</string>
    <string name="d7">D7</string>
    <string name="c6">C6</string>
    <string name="c4">C4</string>
    <string name="c5">C5</string>
    <string name="d1">D1</string>
    <string name="d3">D3</string>
    <string name="d8">D8</string>
    <string name="d2">D2</string>
    <string name="c2">C2</string>
    <string name="d4">D4</string>
    <string name="d5">D5</string>
    <string name="a1">A1</string>
    <string name="b2">B2</string>
    <string name="b3">B3</string>
    <string name="b4">B4</string>
    <string name="b5">B5</string>
    <string name="b6">B6</string>
    <string name="b7">B7</string>
    <string name="b8">B8</string>
    <string name="a2">A2</string>
    <string name="a3">A3</string>
    <string name="a4">A4</string>
    <string name="a5">A5</string>
    <string name="a6">A6</string>
    <string name="a7">A7</string>
    <string name="a8">A8</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="b1">B1</string>
    <string name="luggage_and_door">Luggage and Door</string>
    <string name="door_and_luggage">Door and Luggage</string>
    <string name="purchase_successful">Purchase Successful</string>
    <string name="add_ticket_to_my_favorites">Add ticket to my favorites</string>
    <string name="searchButtonName">SEARCH</string>
    <string name="MyProfileButtonName">MY PROFILE</string>
    <string name="QuickBuyButtonName">QUICK BUY</string>
    <string name="TrainMapButtonName">TRAIN MAP</string>
    <string name="CoronaMapButtonName">CORONA MAP</string>
    <string name="DropDownDeparture">Departure City</string>
    <string name="DropDownDestination">Destination City</string>
    <string name="DropDownDay">Day</string>
    <string name="DropDownMonth">Month</string>
    <string name="DropDownYear">Year</string>
    <string name="PassengerCount">Passenger Count</string>
    <string name="FindTrains">Find Trains</string>
    <string name="SuitableTrains">Suitable Trains</string>
    <string name="CoronaMap">Corona Map</string>
    <string name="TrainMap">Train Map</string>
    <string name="FavouriteTickets">Favourite Tickets:</string>
    <string name="LastTicket">Last Ticket:</string>
    <string name="safetrail">SafeTrail</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>