<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuickBuy">

    <Button
        android:id="@+id/MyProfileButton"
        app:backgroundTint="@color/lilac"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="138dp"
        android:layout_height="56dp"
        android:background="@color/lilac"
        android:insetBottom="0dp"
        android:text="@string/MyProfileButtonName"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="674dp" />

    <Button
        android:id="@+id/QuickBuyButton"
        app:backgroundTint="@color/baby_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="137dp"
        android:layout_height="56dp"
        android:background="@color/baby_blue"
        android:insetBottom="0dp"
        android:text="@string/QuickBuyButtonName"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="674dp" />

    <Button
        android:id="@+id/SearchButton"
        android:layout_width="137dp"
        android:layout_height="56dp"
        android:background="@color/lilac"
        android:insetBottom="0dp"
        android:text="@string/searchButtonName"
        app:backgroundTint="@color/lilac"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="80dp"
        android:text="@string/FavouriteTickets"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="308dp"
        android:text="@string/LastTicket"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ListView
        android:id="@+id/favouriteTicketList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="310dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.397" />

    <ListView
        android:id="@+id/lastTicketList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="480dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>
