<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment_information">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AdminPanelNew.AppBarOverlay"
        android:background="@color/lilac">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lilac"
            android:textSize="15sp"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/TextAppearance.AppCompat.Display3"
            app:tabTextColor="@color/black" />


    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/refresh"
        android:icon="@drawable/refresh"
        android:drawableLeft="@drawable/refresh"
        android:backgroundTint="@color/pastel_green"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="340dp"
        android:layout_centerHorizontal="true"
        app:showAsAction="always" />

    <TextView
        android:id="@+id/textView_info1"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:text="@string/tab_text_14" />
    <TextView
        android:id="@+id/textView_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:text="@string/tab_text_15" />
    <TextView
        android:id="@+id/textView_info3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:text="@string/tab_text_16" />

    <EditText
        android:id="@+id/list_view_info_ticket"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="210dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/grey"
        android:editable="false"
        android:background="@color/baby_blue" >
    </EditText>
    <EditText
        android:id="@+id/list_view_info_customer"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="140dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/grey"
        android:editable="false"
        android:background="@color/baby_blue" >
</EditText>
    <EditText
        android:id="@+id/list_view_info_train"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="280dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/grey"
        android:editable="false"
        android:background="@color/baby_blue" >

    </EditText>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</RelativeLayout>